# transmission-arm-static

./: .gitignore  .transmission-arm-static.sh.swp  README.md  build-arm-linux-musleabi.sh  build-gcc.sh  transmission-arm-musl.sh  transmission-arm-musleabi.sh  transmission-arm-static.sh  transmission-arm-tomatoware.sh
files/transmission/transmission-4.0.6/solartracker/cli/: CMakeLists.txt
files/transmission/transmission-4.0.6/solartracker/cli/bundled/: CMakeLists.txt
files/transmission/transmission-4.0.6/solartracker/cli/system/: CMakeLists.txt
files/transmission/transmission-4.0.6/solartracker/daemon/: CMakeLists.txt
files/transmission/transmission-4.0.6/solartracker/daemon/bundled/: CMakeLists.txt
files/transmission/transmission-4.0.6/solartracker/daemon/system/: CMakeLists.txt
files/transmission/transmission-4.0.6/solartracker/utils/: CMakeLists.txt
files/transmission/transmission-4.0.6/solartracker/utils/bundled/: CMakeLists.txt
files/transmission/transmission-4.0.6/solartracker/utils/system/: CMakeLists.txt
files/uClibc-ng/uClibc-ng-1.0.37/: .config
patches/libnatpmp/libnatpmp-20230423/solartracker/: 100-makefile.patch
patches/transmission/: transmission-3.00+git  transmission-4.0.6+git
patches/transmission/transmission-4.0.6/solartracker/bundled/: 102-static-cli-bundled.patch  104-static-daemon-bundled.patch  106-static-utils-bundled.patch
patches/transmission/transmission-4.0.6/solartracker/system/: 101-static-cli-system.patch  103-static-daemon-system.patch  105-static-utils-system.patch
